--- a/003_testing_markitdown.ipynb
+++ b/003_testing_markitdown.ipynb
@@ -20,11 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from markitdown import MarkItDown"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**.xlsx** to markdown:"
    ]
   },
   {
@@ -82,6 +89,46 @@
     "# Write the content to the file\n",
     "with open('publikaciju-top-5-iestades-pil-2021Q4.md', \"w\", encoding=\"utf-8\") as file:\n",
     "    file.write(result.text_content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "OpenAI image description using `MarkItDown` as an input:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import keyring # pip install keyring\n",
+    "from openai import OpenAI # pip install openai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "# Description:\n",
+      "The image illustrates a conversion process from multiple file formats to Markdown. On the left, a cluster of icons represents various file types, including HTML, CSV, XML, images, audio, PDF, PowerPoint, JSON, Word, and Excel. An arrow points from these diverse formats to a single Markdown icon on the right, symbolizing the unification or transformation of different document types into the Markdown format. This depiction emphasizes Markdown's versatility in handling a wide range of data inputs for simplified text formatting and presentation.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "client = OpenAI(api_key=keyring.get_password('OpenAI_API_key', 'Medium_API_test'))\n",
+    "md = MarkItDown(llm_client=client, llm_model=\"gpt-4o\")\n",
+    "result = md.convert(\"01_Titulbilde.png\")\n",
+    "print(result.text_content)"
    ]
   }
  ],
