--- a/003_testing_markitdown.ipynb
+++ b/003_testing_markitdown.ipynb
@@ -10,6 +10,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`markitdown` version: 0.0.1a3 is used in these examples."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -20,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +38,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**.xlsx** to markdown:"
+    "## **.xlsx** to markdown"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ".xlsx file source - [LV open data portal](https://data.gov.lv/dati/lv/dataset/publisko-iepirkumu-likuma-publikaciju-raditaji/resource/db8015e9-c7c0-46c4-a5e4-6614ae54e526)"
    ]
   },
   {
@@ -95,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "OpenAI image description using `MarkItDown` as an input:"
+    "## OpenAI image description using `MarkItDown` as an input"
    ]
   },
   {
@@ -128,6 +142,93 @@
     "client = OpenAI(api_key=keyring.get_password('OpenAI_API_key', 'Medium_API_test'))\n",
     "md = MarkItDown(llm_client=client, llm_model=\"gpt-4o\")\n",
     "result = md.convert(\"01_Titulbilde.png\")\n",
+    "print(result.text_content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **HTML** to markdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = md.convert_url('https://www.delfi.lv/193/politics/120055869/video-rinkevics-gadumijas-uzruna-aicina-iedzivotajus-nemt-savu-dzivi-savas-rokas')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "* T, 1. janvāris\n",
+      "* [Laimnesis, Solvita, Solvija](https://www.delfi.lv)\n",
+      "\n",
+      "* [Kontakti](https://www.delfi.lv/kontakti)\n",
+      "* [Reklāma](https://reklama.delfi.lv/)\n",
+      "\n",
+      "* [Ziņas](https://www.delfi.lv/zinas)\n",
+      "* [Bizness](https://www.delfi.lv/bizness)\n",
+      "* [Life](https://www.delfi.lv/life)\n",
+      "* [Sports](/sports)\n",
+      "* [Kultūra](/kultura)\n",
+      "* [Auto](/auto)\n",
+      "* [Tasty](/tasty)\n",
+      "* [Delfi TV](/video)\n",
+      "[Delfi](/)Saglabāt rakstuDalīties[Viedokļi](/193/politics/120055869/video-rinkevics-gadumijas-uzruna-aicina-iedzivotajus-nemt-savu-dzivi-savas-rokas/comments)\n",
+      "## Sabiedrība\n",
+      "\n",
+      "01.01.2025 00:01:33\n",
+      "# Video: Rinkēvičs gadumijas uzrunā aicina iedzīvotājus \"ņemt savu dzīvi savās rokās\" [(30)](https://www.delfi.lv/193/politics/120055869/video-rinkevics-gadumijas-uzruna-aicina-iedzivotajus-nemt-savu-dzivi-savas-rokas/comments)\n",
+      "\n",
+      "LETA![Edgars Rinkēvičs](https://images.delfi.lv/media-api-image-cropper/v1/2c1acf40-0ad7-49f5-9268-e6ef12b7cb34.jpg?w=576&h=324&r=16:9 \"Edgars Rinkēvičs\")\n",
+      "\n",
+      "Foto: Foto: Jānis Deinats, Valsts prezidenta kanceleja\n",
+      "\n",
+      "Valsts prezidents Edgars Rinkēvičs savā gadumijas uzrunā aicināja Latvijas iedzīvotājus nesēdēt rokas klēpī salikušiem, bet ņemt savu dzīvi savās rokās.\n",
+      "\n",
+      "Valsts prezidents norādīja, ka ir dažādi iemesli, kāpēc mazos un lielos mērķus var nesasniegt. Viņaprāt, lielākais un svarīgākais iemesls ir nemēģināšana, tāpēc ir jāmēģina.\n",
+      "\n",
+      "Viņš uzsvēra, ka labāk ir smelt izlietu ūdeni, nevis staigāt ap spaini un neuzzināt, kas tur iekšā. Gadumijas uzrunā Rinkēvičs pieminēja latviešu tautas pasakas, uzsverot, ka tajās ir daudz vērtīgā un tās māca labestību, kā arī pazemību. Turklāt tās aicina neskatīties uz ārieni, bet ieraudzīt cilvēka personību.\n",
+      "\n",
+      "\"Ir laiks atmest tik pierasto \"Kā būs, tā būs\". Nē. Nevis būs tā, kā būs. Bet būs tā, kā mēs lemsim un kā mēs darīsim. Mums nav vajadzīgs vienmēr klātesošais \"Nu, ko tad es\". Tā vietā lai nāk \"Tieši es!\". Iztiksim bez tik ērtā \"Es jau neko\". Nevis \"es jau neko\", bet \"es varu un daru\",\" akcentēja Valsts prezidents.\n",
+      "\n",
+      "Tāpat viņš aicināja nesamierināties ar netaisnību, nedarīt tikai \"mīļā miera labad\", jo patiess miers var pastāvēt tikai tad, ja tas ir balstīts taisnīgumā. Viņaprāt, ir laiks atmest uzskatu, ka nevajadzētu lēkt uz ecēšām, jo dažreiz ir jālec un tieši uz ecēšām. Prezidents akcentēja, ka pats galvenais ir lekt tur, kur \"paši lemsim lēkt, tik augstu un tik tālu, kā paši nolemsim\".\n",
+      "\n",
+      "Rinkēvičs arī norādīja, ka mums nav bezpalīdzīgi jāplūst pa straumi, jo šī straume ir jāveido pašiem. Viņš uzsvēra, ka Latvijā ir cilvēki, kas var radīt tādu \"Straumi\", kurai seko visā pasaulē. Prezidenta ieskatā tas nav pārsteigums, bet likumsakarība, par ko viņš priecājas.\n",
+      "\n",
+      "\"Nākamajā gadā veidosim jaunus stāstus un jaunus sapņus. Par mums. Par Latviju. Par mūsu laika brīnumiem - par uzņēmīgiem cilvēkiem, par drosmīgiem cilvēkiem, par neatlaidīgiem cilvēkiem, par mīlošiem cilvēkiem,\" pauda Valsts prezidents.\n",
+      "\n",
+      "Viņš aicināja rakstīt Latvijas stāstu, kurā izceļam nevis citu kļūdas, bet gan savus darbus, tādu stāstu, kurā lēmumus pieņemam mēs paši un arī kura galvenie varoņi esam mēs paši.\n",
+      "\n",
+      "\"Stāstu, kurā pareizs laiks vienmēr ir mūsu laiks. Mūsu Latvijas un mūsu cilvēku laiks. Tad tā vairs nebūs nekāda pasaka, bet īstenība,\" uzsvēra Valsts prezidents, novēlot daudz prieka un gandarījuma jaunajā 2025. gadā.\n",
+      "\n",
+      "[Valsts prezidents](//delfi.lv/temas/40942801/valsts-prezidents)[Edgars Rinkēvičs](//delfi.lv/temas/41374559/edgars-rinkevics)[Valsts prezidenta kanceleja](//delfi.lv/temas/43002592/valsts-prezidenta-kanceleja)\n",
+      "\n",
+      "Seko \"Delfi\" arī [Instagram](https://www.instagram.com/delfi.lv/) vai [YouTube](https://www.youtube.com/channel/UCw5foWtcJvAbUm64rv7jwUQ) profilā – pievienojies, lai uzzinātu svarīgāko un interesantāko pirmais!\n",
+      "\n",
+      "Publikācijas saturs vai tās jebkāda apjoma daļa ir aizsargāts autortiesību objekts Autortiesību likuma izpratnē, un tā izmantošana bez izdevēja atļaujas ir aizliegta. Vairāk lasi [šeit](https://www.delfi.lv/noteikumi#autortiesibas)\n",
+      "###### LASI VĒL\n",
+      "\n",
+      "[![\"Latviju veido tās cilvēki, viņu sapņi un darbi,\" gadumijas uzrunā uzsver Siliņa](https://images.delfi.lv/media-api-image-cropper/v1/2002bada-f66d-4ac3-9fa4-3e90707ab55f.jpg?w=200&h=200 \"\\\"Latviju veido tās cilvēki, viņu sapņi un darbi,\\\" gadumijas uzrunā uzsver Siliņa\")](https://www.delfi.lv/193/politics/120055672/latviju-veido-tas-cilveki-vinu-sapni-un-darbi-gadumijas-uzruna-uzsver-silina)\n",
+      "#### [\"Latviju veido tās cilvēki, viņu sapņi un darbi,\" gadumijas uzrunā uzsver Siliņa](https://www.delfi.lv/193/politics/120055672/latviju-veido-tas-cilveki-vinu-sapni-un-darbi-gadumijas-uzruna-uzsver-silina)[(14)](https://www.delfi.lv/193/politics/120055672/latviju-veido-tas-cilveki-vinu-sapni-un-darbi-gadumijas-uzruna-uzsver-silina/comments)\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
     "print(result.text_content)"
    ]
   }
