add aspect ratio and google-genai version upgrade

--- a/019_NanoBanana.ipynb
+++ b/019_NanoBanana.ipynb
@@ -10,20 +10,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Created for this article: https://aivis.medium.com/attēlu-veidošana-ar-nano-banana-f92878678da6"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from dotenv import load_dotenv # pip install python-dotenv\n",
     "from google import genai # pip install google-genai\n",
+    "from google.genai import types\n",
     "import os\n",
     "from PIL import Image # pip install Pillow\n",
     "from io import BytesIO"
@@ -31,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +34,7 @@
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,12 +46,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = genai.Client()\n",
-    "# client = genai.Client(api_key=os.getenv('GEMINI_API_KEY'))"
+    "#MODEL = \"gemini-2.5-flash-image-preview\" # until 2nd October 2025\n",
+    "MODEL = \"gemini-2.5-flash-image\" # from 2nd October 2025"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#client = genai.Client()\n",
+    "client = genai.Client(api_key=os.getenv('GEMINI_API_KEY'))"
    ]
   },
   {
@@ -69,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,20 +97,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Here's that dramatic aerial view from the Vanšu Bridge you described: \n"
+     "ename": "NameError",
+     "evalue": "name 'MODEL' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m response = client.models.generate_content(\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     model=\u001b[43mMODEL\u001b[49m,\n\u001b[32m      3\u001b[39m     contents=[prompt1],\n\u001b[32m      4\u001b[39m )\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m part \u001b[38;5;129;01min\u001b[39;00m response.candidates[\u001b[32m0\u001b[39m].content.parts:\n\u001b[32m      7\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m part.text \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "\u001b[31mNameError\u001b[39m: name 'MODEL' is not defined"
      ]
     }
    ],
    "source": [
     "response = client.models.generate_content(\n",
-    "    model=\"gemini-2.5-flash-image-preview\",\n",
+    "    model=MODEL,\n",
     "    contents=[prompt1],\n",
     ")\n",
     "\n",
@@ -122,12 +130,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Setting the aspect ratio**  \n",
+    "- https://ai.google.dev/gemini-api/docs/image-generation#aspect_ratios"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = client.models.generate_content(\n",
+    "    model=MODEL,\n",
+    "    contents=[prompt1],\n",
+    "    config=types.GenerateContentConfig(\n",
+    "        image_config=types.ImageConfig(\n",
+    "            aspect_ratio=\"21:9\",\n",
+    "        )\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is a dramatic aerial view looking straight down from the Vanšu Bridge in Riga, Latvia, capturing the stormy atmosphere you described:\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for part in response.candidates[0].content.parts:\n",
+    "    if part.text is not None:\n",
+    "        print(part.text)\n",
+    "    elif part.inline_data is not None:\n",
+    "        image = Image.open(BytesIO(part.inline_data.data))\n",
+    "        image.save(\"prompt1_vansu_bridge_21_9.png\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Image editing (text-and-image-to-image)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,12 +219,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "response = client.models.generate_content(\n",
-    "    model=\"gemini-2.5-flash-image-preview\",\n",
+    "    model=MODEL,\n",
     "    contents=[prompt2, image1],\n",
     ")"
    ]
@@ -222,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,12 +341,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "response = client.models.generate_content(\n",
-    "    model=\"gemini-2.5-flash-image-preview\",\n",
+    "    model=MODEL,\n",
     "    contents=[prompt3, image2],\n",
     ")"
    ]
@@ -315,6 +372,38 @@
     "    elif part.inline_data is not None:\n",
     "        image = Image.open(BytesIO(part.inline_data.data))\n",
     "        image.save(\"prompt3_Dimiters_J_Seno-sapnu-bukete_2.png\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Setting the aspect ratio**  \n",
+    "- https://ai.google.dev/gemini-api/docs/image-generation#aspect_ratios"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = client.models.generate_content(\n",
+    "    model=MODEL,\n",
+    "    contents=[prompt3, image2],\n",
+    "    config=types.GenerateContentConfig(\n",
+    "        image_config=types.ImageConfig(\n",
+    "            aspect_ratio=\"16:9\",\n",
+    "        )\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "for part in response.candidates[0].content.parts:\n",
+    "    if part.text is not None:\n",
+    "        print(part.text)\n",
+    "    elif part.inline_data is not None:\n",
+    "        image = Image.open(BytesIO(part.inline_data.data))\n",
+    "        image.save(\"prompt3_Dimiters_J_Seno-sapnu-bukete_AR_16_9.png\")"
    ]
   },
   {
@@ -458,12 +547,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "response = client.models.generate_content(\n",
-    "    model=\"gemini-2.5-flash-image-preview\",\n",
+    "    model=MODEL,\n",
     "    contents=[prompt4, image3_5],\n",
     ")"
    ]
@@ -531,12 +620,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "response = client.models.generate_content(\n",
-    "    model=\"gemini-2.5-flash-image-preview\",\n",
+    "    model=MODEL,\n",
     "    contents=[prompt5, image4_1])"
    ]
   },
@@ -592,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +711,7 @@
    ],
    "source": [
     "response = client.models.generate_content(\n",
-    "    model=\"gemini-2.5-flash-image-preview\",\n",
+    "    model=MODEL,\n",
     "    contents=[prompt5, image5_1, image5_2])"
    ]
   },
@@ -635,12 +724,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "response = client.models.generate_content(\n",
-    "    model=\"gemini-2.5-flash-image-preview\",\n",
+    "    model=MODEL,\n",
     "    contents=[prompt5, image5_2, image5_1])"
    ]
   },
@@ -681,12 +770,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "response = client.models.generate_content(\n",
-    "    model=\"gemini-2.5-flash-image-preview\",\n",
+    "    model=MODEL,\n",
     "    contents=[prompt6, image6_2, image6_1])"
    ]
   },
@@ -734,12 +823,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "response = client.models.generate_content(\n",
-    "    model=\"gemini-2.5-flash-image-preview\",\n",
+    "    model=MODEL,\n",
     "    contents=[prompt7, image7_1])"
    ]
   },
@@ -766,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +863,7 @@
       "text/markdown": [
        "Python version: 3.13.3 (tags/v3.13.3:6280bb5, Apr  8 2025, 14:47:33) [MSC v.1943 64 bit (AMD64)]\n",
        "\n",
-       "[google-genai](https://pypi.org/project/google-genai/) version: 1.33.0\n",
+       "[google-genai](https://pypi.org/project/google-genai/) version: 1.41.0\n",
        "\n",
        "[Pillow](https://pypi.org/project/Pillow/) version: 11.3.0\n",
        "\n",
